--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ h1 {
     margin: 10px auto;
 }
 
+.main-container {
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 .subtitle{
     font-size: 16px;
     font-weight: bold;
@@ -118,7 +123,7 @@ h2 {
 
 
 .clicked-cell {
-    background-color: darkblue;
+    background-image: linear-gradient(45deg, #0008ff, #120058);
     color: white;
 }
 
@@ -126,4 +131,11 @@ ul {
     font-size: 40px;
     margin-top: 20px;
     color:red;
+}
+
+
+.hintIcon{
+    font-size: 30px;
+    cursor: pointer;
+    margin: 5px;
 }
